# cloudini-release

./: .pre-commit-config.yaml  CHANGELOG.rst  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  benchmark_compression.py  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.claude/: ALGORITHM_ANALYSIS.md
.github/: dependabot.yml
.github/workflows/: release-appimage.yaml  ros-humble.yaml  ros-jazzy.yaml  ros-kilted.yaml  ros-rolling.yaml  ubuntu-build.yaml
cloudini_foxglove/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
cloudini_foxglove/src/: PointCloudConverter.tsx  Schemas.tsx  cloudini_wasm.d.ts  cloudini_wasm_single.d.ts  index.ts
cloudini_lib/: CHANGELOG.rst  CMakeLists.txt  data_path.hpp.in  package.xml
cloudini_lib/benchmarks/: CMakeLists.txt  pcd_benchmark.cpp
cloudini_lib/cmake/: FindZSTD.cmake  find_or_download_lz4.cmake  find_or_download_mcap.cmake  find_or_download_zstd.cmake
cloudini_lib/include/cloudini_lib/: basic_types.hpp  cloudini.hpp  encoding_utils.hpp  field_decoder.hpp  field_encoder.hpp  intrinsics.hpp  pcl_conversion.hpp  ros_message_definitions.hpp  wasm_functions.h
cloudini_lib/include/cloudini_lib/contrib/: nanocdr.hpp
cloudini_lib/src/: field_decoder.cpp  field_encoder.cpp  pcl_conversion.cpp  ros_msg_utils.cpp  wasm_functions.cpp
cloudini_lib/test/: CMakeLists.txt  test_field_encoders.cpp  test_header.cpp  test_intrinsics.cpp  test_pcl.cpp
cloudini_lib/tools/: CMakeLists.txt  cloudini_converter.desktop
cloudini_lib/tools/include/: mcap_converter.hpp
cloudini_lib/tools/qt_app/: bytearray_writable.hpp  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
cloudini_lib/tools/src/: cloudini_rosbag_converter.cpp  mcap_converter.cpp  mcap_cutter.cpp  mcap_header_inspector.cpp
cloudini_py/: IMPLEMENTATION_NOTES.md  README.md  cloudini_decoder.py  decode_mcap.py  requirements.txt
cloudini_ros/: CHANGELOG.rst  CMakeLists.txt  README.md  cloudini_plugins.xml  package.xml
cloudini_ros/include/cloudini_plugin/: cloudini_publisher_plugin.hpp  cloudini_subscriber_plugin.hpp
cloudini_ros/include/cloudini_ros/: cloudini_subscriber_pcl.hpp
cloudini_ros/src/: cloudini_publisher_plugin.cpp  cloudini_subscriber_pcl.cpp  conversion_utils.cpp  plugin_manifest.cpp  topic_converter.cpp
cloudini_ros/test/: draco_helper.hpp  rosbag_benchmark.cpp  rosbag_benchmark.hpp  test_cloudini_subscriber.cpp  test_direct_publisher.cpp  test_plugin_publisher.cpp  test_plugin_subscriber.cpp
cloudini_web/: index.html  main.js  package.json
cloudini_web/src/: style.css
cmake/: FindLZ4.cmake  find_or_download_lz4.cmake  find_or_download_mcap.cmake  find_or_download_zstd.cmake
debian/: changelog  control  copyright  gbp.conf  rules
include/cloudini_lib/: field_encoder.hpp  ros_msg_utils.hpp
include/cloudini_lib/contrib/: span.hpp
include/cloudini_ros/: conversion_utils.hpp
rpm/: ros-humble-cloudini-lib.spec  ros-humble-cloudini-ros.spec  ros-jazzy-cloudini-lib.spec  ros-jazzy-cloudini-ros.spec  ros-kilted-cloudini-lib.spec  ros-kilted-cloudini-ros.spec  ros-rolling-cloudini-lib.spec  ros-rolling-cloudini-ros.spec  template.spec
src/: cloudini.cpp  cloudini_subscriber_plugin.cpp  topic_converter.cpp
test/: draco_helper.cpp  rosbag_benchmark.cpp  test_field_encoders.cpp  test_ros_msg.cpp
tools/qt_app/: mainwindow.ui
tools/src/: pcd_to_cloudini_converter.cpp
