<?xml version="1.0"?>
<package format="3">
  <name>cloudini_lib</name>
  <version>1.0.0</version>
  <description>
  Main library of Cloudini, the pointcloud compression library
  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>

  <license>Apache 2.0</license>

  <author>Davide Faconti</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libpcl-common</depend>
  <depend>libpcl-io</depend>
  <depend>libzstd-dev</depend>
  <depend>lz4</depend>
  <depend>mcap_vendor</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
      <build_type >ament_cmake</build_type>
  </export>

</package>
