<?xml version="1.0"?>
<package format="3">
  <name>cloudini_lib</name>
  <version>1.0.1</version>
  <description>
  Main library of Cloudini, the pointcloud compression library
  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>

  <license>Apache 2.0</license>

  <author>Davide Faconti</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_export_depend>libpcl-all-dev</build_export_depend>
  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-io</exec_depend>
  <build_depend>libzstd-dev</build_depend>
  <build_depend>lz4</build_depend>
  <build_depend>mcap_vendor</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
      <build_type >ament_cmake</build_type>
  </export>

</package>
